# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  compile_flags.txt  mandelbrot.c
src/: mandelbrot.c  mandelbrot.h  mandelbrotfunction.c  mandelbrotfunction.h  mandelbrotview.c  mandelbrotview.h  rubberband.c  rubberband.h  viewer.c
test/: demo_rubberband.c
